# keelson

./: .ai-task-0QB8fSjO  .ai-task-7K3bniQf  .ai-task-F-c3ddId  .ai-task-WGoV69RB  .ai-task-YvHKkjLC  .ai-task-_A4JU-mo  .ai-task-iRlZjdIF  .ai-task-plan-fE1d1PjI  .ai-task-yFj3N72_  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .venv  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LEGAL.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  ruff.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: architect.md  code-reviewer.md  qa.md  researcher.md
.claude/commands/: add-template.md  code-review.md  erode.md  feature.md  probe.md  recon.md  report.md  scan-category.md  scan-quick.md  scan-stealth.md  scan-thorough.md  scan.md  security-review.md  smart-scan.md  test-file.md
.claude/hooks/: format-py.sh
.claude/rules/: agent-context.md  architecture.md  attack-playbook-standards.md  coding-standards.md  git-workflow.md  new-chatbot-adapter.md  no-vendor-references.md  pre-commit-requirements.md  probe-playbook-standards.md  python-standards.md  security-review.md  solid-dry.md  test-coverage.md  typescript-standards.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  template_request.md
.github/backlog/: week1-4-issues.csv
.github/runner/: Dockerfile
.github/workflows/: ci.yml  claude-code.yml  publish.yml
.husky/: pre-commit
_legacy/src/: __init__.py
_legacy/tests/: test_adapter_http.py  test_adapter_retry.py  test_branching.py  test_cache_adapter.py  test_campaign_config.py  test_campaign_config_v2.py  test_campaign_runner.py  test_cli.py  test_cli_v2.py  test_concurrency.py  test_convergence.py  test_defend_crewai.py  test_defend_engine.py  test_detection.py  test_diff.py  test_engine.py  test_enhanced_diff.py  test_executive_report.py  test_generator.py  test_health_service.py  test_llm_judge.py  test_mcp_adapter.py  test_memo.py  test_memo_v2.py  test_ocsf.py  test_prober_provider.py  test_reporter.py  test_scanner.py  test_store.py  test_store_v3.py  test_strategist.py  test_templates.py  test_tiers.py  test_yaml_templates.py
agents/: judge.md  pentester.md  recon.md  reporter.md  strategist.md
attacks/cognitive-architecture/: CA-001.yaml  CA-002.yaml  CA-003.yaml  CA-005.yaml  CA-006.yaml  CA-007.yaml  CA-008.yaml
attacks/conversational-exfiltration/: EX-001.yaml  EX-002.yaml  EX-003.yaml  EX-004.yaml  EX-006.yaml  EX-007.yaml  EX-008.yaml  EX-009.yaml
attacks/delegation-integrity/: DI-001.yaml  DI-003.md  DI-003.yaml  DI-004.md  DI-004.yaml  DI-005.md  DI-006.md  DI-006.yaml  DI-007.yaml  DI-008.yaml
attacks/execution-safety/: ES-001.yaml  ES-002.md  ES-002.yaml  ES-003.yaml  ES-004.md  ES-004.yaml  ES-005.yaml  ES-006.md  ES-006.yaml  ES-007.md  ES-007.yaml  ES-008.yaml  ES-009.yaml  ES-010.yaml  ES-011.yaml  ES-012.yaml
attacks/goal-adherence/: GA-001.md  GA-001.yaml  GA-002.md  GA-002.yaml  GA-003.md  GA-003.yaml  GA-004.md  GA-004.yaml  GA-005.md  GA-006.md  GA-006.yaml  GA-007.md  GA-007.yaml  GA-008.md  GA-008.yaml  GA-009.md  GA-009.yaml  GA-010.md  GA-010.yaml  GA-012.yaml  GA-013.yaml  GA-014.md  GA-014.yaml  (+56 more)
commands/: attack.md  probe.md  recon.md  report.md  scan.md
docs/: commands-reference.md  core-scanning-libraries.md  github-action-spec.md  new-attack-surfaces.md  openapi.yaml  openclaw-adoption-plan.md  status.md  suggested-libraries.md
engagements/: aggressive.yaml  stealth-coding-agent.yaml  stealth-cs-bot.yaml  stealth-general.yaml
pentis/: __init__.py
reports/: scan-2026-03-10T12-26-46.md  scan-2026-03-11-fin-ai-v2.md  scan-2026-03-11-fin-ai.md  scan-2026-03-11-forethought-ai.md
scripts/: convert_md_to_yaml.py  import_github_issues.sh  validate_attacks.py  validate_probes.py
src/: config.ts  utils.ts  version.ts
tests/: config.test.ts  conftest.py  mock_server.py  test_a2a_adapter.py  test_adapter.py  test_adapter_extended.py  test_adapter_http.py  test_adapter_retry.py  test_anthropic_adapter.py  test_attack_tree.py  test_attacker_provider.py  test_banner.py  test_branching.py  test_cache_adapter.py  test_campaign_config.py  test_campaign_config_v2.py  test_campaign_runner.py  test_chains.py  test_cli.py  test_cli_v2.py  test_compliance.py  test_concurrency.py  test_convergence.py  test_crewai_adapter.py  test_defend_crewai.py  test_defend_engine.py  test_defend_langchain.py  test_defend_loader.py  test_detection.py  test_detection_extended.py  test_detection_json.py  test_diff.py  test_discovery.py  test_discovery_schema.py  test_engine.py  test_engine_extended.py  test_engine_observer.py  test_enhanced_diff.py  test_event_bus.py  test_executive_report.py  (+44 more)
(+1448 files in other folders)
