[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pentis"
version = "0.1.0"
description = "AI Agent Security Scanner — black-box vulnerability testing for LLM-powered agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Pentis Team" },
]
keywords = ["security", "ai", "agents", "llm", "vulnerability", "scanner", "pentesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
pentis = "pentis.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pentis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
