[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pentis"
version = "0.4.0"
description = "AI agent security scanner — Living Red Team"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Pentis AI" }]
keywords = ["security", "pentesting", "llm", "agent", "owasp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.urls]
Homepage = "https://github.com/pentis-ai/pentis"
Documentation = "https://github.com/pentis-ai/pentis#readme"
Repository = "https://github.com/pentis-ai/pentis"
Issues = "https://github.com/pentis-ai/pentis/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "pyright>=1.1",
    "pre-commit>=3.0",
]
crewai = ["crewai>=0.80"]
langchain = ["langchain-core>=0.3"]
all = ["pentis[crewai,langchain]"]

[project.scripts]
pentis = "pentis.cli:app"
pentis-service = "pentis_service.main:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/pentis", "src/pentis_service"]

[tool.hatch.build.targets.wheel.force-include]
"src/pentis/attacks" = "pentis/attacks"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 300
addopts = ["-ra", "--strict-markers", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "C901"]
per-file-ignores = {"tests/**" = ["C901"]}

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.isort]
known-first-party = ["pentis", "pentis_service"]
